kubernates/UI/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapp-ui
  labels:
    app: weatherapp-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: weatherapp-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weatherapp-ui
    spec:
      containers:
      - name: weatherapp-ui-container
        image: bagato220/ui:15520617232
        ports:
        - containerPort: 3000
          protocol: TCP
          name: ui-ports
        livenessProbe:
          httpGet:
            path: / 
            port: ui-ports
        readinessProbe:
          httpGet:
            path: / 
            port: ui-ports
