kubernates/UI/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ui-ingress
spec:
  tls:
  - hosts: 
    - weatherapp.local
    secretName: weatherapp-ui-tls
  rules:
  - host: weatherapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weatherapp-ui-svc 
            port:
              number: 3000
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
